# mat-conv-fpga

./: .gitignore  README.md
hdl/fifo/: fifo_sync_if.sv
hdl/mac/: filelist.txt  mac.vhd  mac_pkg.vhd
hdl/mat_mult_reg/: mat_mult.rdl  mat_mult_reg_pkg.vhd
hdl/mat_mult_top/: filelist.txt
hdl/tb_fifo_async/: tb_top.sv
hdl/tb_fifo_sync/: tb_top.sv
rtl/: README.md
rtl/hdl/axi/: axi_master.vhd  axi_receiver.vhd  axi_slave.vhd  axi_transmitter.vhd  axi_transmitter.vhd2  fifo_64x512.vhd  fifo_64x512_AlteraMF.vhd  fifo_64x512_CoreFIFO.vhd  fifo_DWxNW_AlteraMF.vhd  filelist.txt  mat_conv_axi_pkg.vhd  rx_buffer.vhd  tx_buffer.vhd
rtl/hdl/cluster/: cluster.vhd  filelist.txt
rtl/hdl/cluster_feeder/: cluster_feeder.vhd  cluster_feeder_flipflop.vhd  cluster_feeder_mux.vhd  filelist.txt
rtl/hdl/cmc/: cmc.vhd  filelist.txt  lsram_1024x18_AlteraMF.vhd
rtl/hdl/core/: core.vhd  filelist.txt
rtl/hdl/fifo/: fifo_async_ea.vhd  fifo_async_if.sv  fifo_async_multw_ea.vhd  fifo_pkg.vhd  fifo_sync_ea.vhd  fifo_sync_multw_ea.vhd  filelist.txt
rtl/hdl/global_mem/: acknowledge_buffer.vhd  filelist.txt  (+2 more)
scripts/: README.md  cron.sh
sim/tb_common/: clean.sh  comp_uvm.sh  sim.sh
sim/tb_fifo_async/: wave.do
sim/tb_fifo_sync/: dependencies.txt  run.do
sw/: WINDOWS_SYSTEMC_INSTALL.md  input  kernel  output
sw/bsp/: bsp_api.c  bsp_api.h  bsp_mat_conv_api.c  bsp_mat_conv_api.h
sw/model/: .gitignore  Makefile.rules  README.md  cmp.py  input  kernel  output  test.py
sw/model/0-appl/: CMakeLists.txt  Makefile  main.cpp  mat_mult.cpp  mat_mult.h  mem_init  system  system.cpp
(+199 files in other folders)
